--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "pnpm": "^10.17.1",
     "vue": "^3.5.21"
   },
   "devDependencies": {
