--- a/package.json
+++ b/package.json
@@ -9,8 +9,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@vuepic/vue-datepicker": "^11.0.2",
     "pnpm": "^10.17.1",
     "vue": "^3.5.21",
+    "vue-cal": "5.0.1-rc.29",
     "vue-router": "^4.5.1"
   },
   "devDependencies": {
