--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@formkit/auto-animate": "^0.9.0",
     "@vuepic/vue-datepicker": "^11.0.2",
     "pnpm": "^10.17.1",
     "vue": "^3.5.21",
