--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@formkit/auto-animate": "^0.9.0",
+    "@material/web": "^2.4.0",
     "@vuepic/vue-datepicker": "^11.0.2",
     "pnpm": "^10.17.1",
     "vue": "^3.5.21",
