--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
   "dependencies": {
     "@formkit/auto-animate": "^0.9.0",
     "@material/web": "^2.4.0",
+    "@tiptap/extension-image": "^3.6.5",
+    "@tiptap/starter-kit": "^3.6.5",
+    "@tiptap/vue-3": "^3.6.5",
     "@vuepic/vue-datepicker": "^11.0.2",
     "pnpm": "^10.17.1",
     "vue": "^3.5.21",
